fix(form): fix buttons misalignment in `inline` layout

--- a/packages/form/src/style/index.less
+++ b/packages/form/src/style/index.less
@@ -101,15 +101,7 @@
       }
     }
   }
-  &__checkbox-list {
-    display: block;
-    width: 100%;
-    @media (min-width: @mobile-min) {
-      .@{ant-prefix}-col {
-        margin-top: 8px;
-      }
-    }
-  }
+
   // upload
   .@{ant-prefix}-upload-select-picture-card i {
     color: #999;
@@ -170,6 +162,7 @@
         }
       }
       &-btns {
+        display: inline-block;
         margin-right: 0;
       }
     }
